[gd_scene load_steps=14 format=3 uid="uid://dibolnwtlpcgq"]

[ext_resource type="Script" path="res://scripts/arena.gd" id="1_vu6ok"]
[ext_resource type="PackedScene" uid="uid://7k5xltg2hw8" path="res://scenes/common_3d.tscn" id="2_qw8ma"]
[ext_resource type="PackedScene" uid="uid://ca5c21n3ub847" path="res://scenes/wall.tscn" id="3_3iwxt"]
[ext_resource type="PackedScene" uid="uid://fjdp76g7y1mb" path="res://scenes/part_button.tscn" id="6_u2300"]
[ext_resource type="PackedScene" uid="uid://cq4gywwo6nthu" path="res://scenes/armor_part.tscn" id="7_egnf0"]
[ext_resource type="PackedScene" uid="uid://eewxycwm7fsg" path="res://scenes/ground.tscn" id="8_cv38k"]
[ext_resource type="PackedScene" uid="uid://dhjl4ne7kf1gk" path="res://scenes/wheel_part.tscn" id="8_y2fcv"]
[ext_resource type="PackedScene" uid="uid://4fui5v13ebcj" path="res://scenes/gun_part.tscn" id="9_k1rwl"]
[ext_resource type="Texture2D" uid="uid://btykjkru56eb8" path="res://textures/crosshair.svg" id="13_cprpm"]
[ext_resource type="PackedScene" uid="uid://270hj1ge6dxn" path="res://scenes/round_counter.tscn" id="14_ar3fi"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3cg83"]
shading_mode = 0
albedo_color = Color(0, 1, 1, 1)
disable_receive_shadows = true

[sub_resource type="SphereMesh" id="SphereMesh_ojded"]
material = SubResource("StandardMaterial3D_3cg83")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tmo8k"]
bg_color = Color(0.301961, 0.301961, 0.301961, 1)

[node name="Arena" type="Node3D" groups=["arena"]]
script = ExtResource("1_vu6ok")

[node name="Common3D" parent="." instance=ExtResource("2_qw8ma")]

[node name="Walls" type="Node3D" parent="."]

[node name="Wall1" parent="Walls" instance=ExtResource("3_3iwxt")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 10, 997.5)

[node name="Wall2" parent="Walls" instance=ExtResource("3_3iwxt")]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 2.08165e-12, 10, -997.5)

[node name="Wall3" parent="Walls" instance=ExtResource("3_3iwxt")]
transform = Transform3D(1.31134e-07, -3.48787e-16, -1, 3.48787e-16, 1, -3.48787e-16, 1, -3.48787e-16, 1.31134e-07, 997.5, 10, 2.08165e-12)

[node name="Wall4" parent="Walls" instance=ExtResource("3_3iwxt")]
transform = Transform3D(-2.18557e-07, 3.48787e-16, 1, 3.48787e-16, 1, -3.48787e-16, -1, 3.48787e-16, -2.18557e-07, -997.5, 10, 2.08165e-12)

[node name="EnemySpawnPoint" type="Node3D" parent="."]
transform = Transform3D(-1, 3.48787e-16, -8.74228e-08, 3.48787e-16, 1, -3.48787e-16, 8.74228e-08, -3.48787e-16, -1, 14.7995, 10.831, -127.463)

[node name="Ground" parent="." instance=ExtResource("8_cv38k")]

[node name="Crosshair" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(50, 50)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("13_cprpm")
expand_mode = 1

[node name="AimDebugSphere" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.07649, 0)
visible = false
cast_shadow = 0
mesh = SubResource("SphereMesh_ojded")

[node name="PlayerSpawnPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.0501, 10.831, -241.678)

[node name="RoundCompleteControl" type="PanelContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.0
offset_top = -174.0
offset_right = 197.0
offset_bottom = -82.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="RoundCompleteControl"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"MarginMedium"

[node name="Label" type="Label" parent="RoundCompleteControl/MarginContainer"]
layout_mode = 2
theme_type_variation = &"BodyLarge"
text = "Round Complete"
horizontal_alignment = 2

[node name="DeathTip" type="PanelContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -277.5
offset_top = 94.0
offset_right = 281.5
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="DeathTip"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"MarginMedium"

[node name="Label" type="Label" parent="DeathTip/MarginContainer"]
layout_mode = 2
theme_type_variation = &"BodyMedium"
text = "Tip: go fast to avoid getting shot"
horizontal_alignment = 2

[node name="PartsEarned" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(490, 170)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -245.0
offset_top = 145.0
offset_right = 245.0
offset_bottom = 357.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PartsEarned"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tmo8k")

[node name="Label" type="Label" parent="PartsEarned"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -108.0
offset_right = 108.0
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"BodyMedium"
text = "Parts Earned"
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PartsEarned"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -235.0
offset_top = -160.0
offset_right = 235.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="ArmorPartButton" parent="PartsEarned/HBoxContainer" instance=ExtResource("6_u2300")]
unique_name_in_owner = true
layout_mode = 2
part = ExtResource("7_egnf0")

[node name="WheelPartButton" parent="PartsEarned/HBoxContainer" instance=ExtResource("6_u2300")]
unique_name_in_owner = true
layout_mode = 2
part = ExtResource("8_y2fcv")

[node name="GunPartButton" parent="PartsEarned/HBoxContainer" instance=ExtResource("6_u2300")]
unique_name_in_owner = true
layout_mode = 2
part = ExtResource("9_k1rwl")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"MarginMedium"

[node name="RoundCounter" parent="MarginContainer" instance=ExtResource("14_ar3fi")]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -93.0
offset_right = 233.0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Control/PanelContainer"]
layout_mode = 2
theme_type_variation = &"MarginMedium"

[node name="Label" type="Label" parent="MarginContainer/Control/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_type_variation = &"BodySmall"
text = "WASD/arrow keys to move
Left click to shoot
Scroll/pinch to zoom
Esc to pause"
vertical_alignment = 2
